fixed the name overspilling

--- a/src/scss/02-base/_typography.scss
+++ b/src/scss/02-base/_typography.scss
@@ -4,7 +4,7 @@ a {
 
 h1{
 	@media screen and (max-width: 786px) {
-		font-size: 11rem;
+		font-size: 1rem;
         font-weight: 400;
 	
 	}
@@ -24,3 +24,11 @@ h3,h4{
 	font-weight: 600;
 }
 
+
+.name{
+	@media screen and (max-width: 786px) {
+		font-size: 1rem;
+        font-weight: 600;
+	
+	}
+}
