--- a/src/scss/04-globals/_header.scss
+++ b/src/scss/04-globals/_header.scss
@@ -138,8 +138,7 @@ nav{
 	margin-top:.5rem;
 	padding-left: 25%;
 	@media screen and (max-width: 786px) {
-		overflow: scroll;
-		padding-left: 5%;
+		padding-left: 0%;
 		
 	
 	}
